js/src/tests/test262/built-ins/Error/the-initial-value-of-errorprototypemessage-is-the-empty-string.js
assert
.
sameValue
(
Error
(
'
a
'
)
.
message
"
a
"
'
The
value
of
err1
.
message
is
"
a
"
'
)
;
assert
.
sameValue
(
new
Error
(
'
a
'
)
.
message
"
a
"
'
The
value
of
err1
.
message
is
"
a
"
'
)
;
assert
(
!
Error
(
)
.
hasOwnProperty
(
'
message
'
)
)
;
assert
(
!
new
Error
(
)
.
hasOwnProperty
(
'
message
'
)
)
;
assert
.
sameValue
(
new
Error
(
)
.
message
Error
.
prototype
.
message
'
The
value
of
new
Error
(
)
.
message
equals
Error
.
prototype
.
message
'
)
;
reportCompare
(
0
0
)
;
